Related: tdf#101881 keys not handled by native menubar sent to vcl one

so 'o' pops up native menu, shift+o is unhandled by native, sent to
vcl one which pops up some shoddy emulated version of the o menu

Change-Id: Id6b0d27dd81f8a6d141cef79cc4825703c923636